vlib/v/checker/tests/inc_num_literal.out
vlib/v/checker/tests/inc_num_literal.vv:1:1: error: cannot increment `100` because it is non lvalue expression
    1 | 100++
      | ~~~
Details: try assign expression to a variable and use increment for it:
	mut variable := 100
	variable++